# OpenDataFusion

./: .env.sample  LICENSE  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: oecd_ingest_dag.py
api/: main.py
dags/: oecd_ingest_dag.py
ingestion/: oecd_ingest.py
processing/: clean_oecd.py
services/fetcher/: fetch_unesco.py  requirements.txt
warehouse/: load_clickhouse.py
