[tool.poetry]
name = "OpenDataFusion"
version = "0.1.0"
description = "Global public data ingestion, ETL, and API platform."
authors = []
readme = "README.md"
packages = [
{include = "ingestion"}, 
# {include = "processing"}, 
# {include = "warehouse"}, 
# {include = "api"}, 
# {include = "config"}, 
# {include = "utils"}
]
# constrait python version 3.11

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1"
pyarrow = "^12.0"
clickhouse-connect = {version="^0.10.0", python=">=3.9,<3.15"}
fastapi = "^0.104"
uvicorn = {extras=["standard"], version="^0.23"}
requests = "^2.32"
python-dotenv = "^1.0"
apache-airflow = {extras=["postgres", "celery"], version="^2.7"}
loguru = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^24.3"
isort = "^6.0"
mypy = "^1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
